# vednn

./: CMakeLists.txt
src/: CMakeLists.txt  vednn.h
src/C/: CMakeLists.txt  vednnBGEMMBackwardData.cpp  vednnBGEMMBackwardWeight.cpp  vednnBGEMMForward.cpp  vednnConvolutionBackwardData.c  vednnConvolutionBackwardData.cpp  vednnConvolutionBackwardFilter.c  vednnConvolutionBackwardFilter.cpp  vednnConvolutionForward.c  vednnConvolutionForward.cpp  vednnInit.c  vednnLaunch.h  vednnLinearBackwardData.c  vednnLinearBackwardData.cpp  vednnLinearBackwardData.h  vednnLinearBackwardWeight.c  vednnLinearBackwardWeight.cpp  vednnLinearForward.c  vednnLinearForward.cpp  vednnLinearForward.h
src/intrinsic/: CMakeLists.txt
src/intrinsic/Convolution/BackwardData/: direct_default.c  direct_dil1_pad0_ker1_owU128.c  direct_dil1_str1.c  direct_dil1_str1_iwU128.c  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.c  direct_dil1_str1_pad0_ker3_iw2XU32_ow2X_ioaligned.c  direct_dil1_str1_pad0_ker3_iwU128.c  direct_dil1_str1_padsame.c  direct_dil1_str1_padsame_ker1.c  direct_dil1_str1_padsame_ker2.c  direct_dil1_str1_padsame_ker3.c  direct_dil1_str1_padsame_ker5.c  direct_dil1_str2_pad2_ker5.c  direct_dil1_str2_pad2_ker5_iwU128.c  direct_iwU128.c  direct_ker3_iwU128.c  direct_ker5.c  direct_ker5_iwU128.c  direct_vecC.c
src/intrinsic/Convolution/Forward/: direct_default.c  direct_dil1_pad0.c  direct_dil1_pad0_ker1.c  direct_dil1_pad0_owU128.c  direct_dil1_pad0_owU128_ker1.c  direct_dil1_str1_pad0.c  direct_dil1_str1_pad0_ker1.c  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.c  direct_dil1_str1_pad0_owU128.c  direct_dil1_str1_padsame.c  direct_dil1_str1_padsame_ker2.c  direct_dil1_str1_padsame_ker3.c  direct_dil1_str1_padsame_ker3_c1.c  direct_dil1_str1_padsame_ker3_c1024x.c  direct_dil1_str1_padsame_ker3_c1_owU128.c  direct_owU128.c  (+3 more)
(+17 files in other folders)
